--- a/app/assets/stylesheets/onboarding.css.scss
+++ b/app/assets/stylesheets/onboarding.css.scss
@@ -455,4 +455,16 @@ h5, h3 {
       padding: 10px;
     }
   }
+  .analytics .card {
+    margin-bottom: 0px;
+  }
+  .analytics {
+    margin-bottom: 10px;
+  }
+  .btn_cntnr {
+    float: none;
+    display: inline-block;
+    margin: 20px 0;
+    padding: 0;
+  }
 }
