--- a/app/assets/stylesheets/_userprofile.css.scss
+++ b/app/assets/stylesheets/_userprofile.css.scss
@@ -440,34 +440,6 @@
   }
 }
 
-.flex--ranking {
-  display: flex;
-  margin: 0 auto;
-  margin-bottom: 5px;
-  #page_title {
-    width: 30%;
-    padding: 36px 0px 0px 0px;
-    margin-top: 0px;
-    text-align: left;
-    border-bottom: none;
-    font-size: 18px;
-    margin-bottom: 5px;
-  }
-  div {
-    width: 70%;
-    margin-bottom: 5px;
-    p {
-      padding-top: 30px;
-      text-align: right;
-    }
-    #page_title  {
-      text-align: right !important;
-      width: 100%;
-      margin-bottom: 20px;
-    }
-  }
-}
-
 .user {
   text-align: center;
   a {
@@ -478,18 +450,6 @@
       color: #3f3f3f;
     }
   }
-}
-
-.link--edit {
-  text-decoration: none;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: black;
-  padding: 20px;
-  display: block;
-  width: 200px;
-  text-align: center;
-  color: white;
 }
 
 .delete {
@@ -557,9 +517,23 @@
   .new--writer--wrapper, .official--writer--wrapper {
       #waiting--for--approval {
         padding-top: 10px;
-        flex-direction: column-reverse;
+        flex-direction: column;
         .dashboard--writer--flex--two {
-          display: none !important;
+          padding: 0 !important;
+          border-left: none;
+          max-width: 100%;
+          margin-top: -10px;
+          .links div {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            a {
+              width: 180px;
+            }
+          }
+          .whats-new-wrapper {
+            width: auto !important;
+          }
         }
         .dashboard--writer--flex--main {
           margin-right: 0;
