--- a/app/views/pages/subscribe.html.erb
+++ b/app/views/pages/subscribe.html.erb
@@ -16,19 +16,16 @@
             <form action="//herokuapp.us14.list-manage.com/subscribe/post?u=5c2a24e15a906f29e2c6a9b72&amp;id=3081d2e76a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" style="padding-left: 0;" novalidate>
                 <div id="mc_embed_signup_scroll">
               <h2>Subscribe to our magazine:</h2>
-              <div id="mce-responses" class="clear">
-                <div class="response" id="mce-error-response" style="display:none"></div>
-                <div class="response" id="mce-success-response" style="display:none"></div>
+              <div id="mce-responses-container">
+                <div id="mce-error-response" style="display:none"></div>
+                <div id="mce-success-response" style="display:none"></div>
               </div>
                  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
             <div class="mccontainer">
-              <div class="mc-field-group" style="min-height: 10px; margin: 0; padding-bottom: 5px;">
-                <label for="mce-EMAIL">Email Address </label>
-              </div>
                <div class="flex--email">
                  <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" style="min-width:70% !important;">
                  <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_5c2a24e15a906f29e2c6a9b72_3081d2e76a" tabindex="-1" value=""></div>
-                 <div class="clear"><input type="submit" value="Subscribe!" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                 <div class="clear"><input type="submit" value="Subscribe!" name="subscribe subscribe_btn" id="mc-embedded-subscribe" class="button"></div>
                </div>
             </div>
               </div>
