--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -158,14 +158,14 @@
               <div id="mc_embed_signup_scroll">
                 <h2>Loving The Teen Magazine? Subscribe!</h2>
                 <div class="mc-field-group">
-                  <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                  <input placeholder="Email Address" type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
                 </div>
-                <div id="mce-responses" class="clear">
-                  <div class="response" id="mce-error-response" style="display:none"></div>
-                  <div class="response" id="mce-success-response" style="display:none"></div>
+                <div >
+                  <div id="mce-error-response" style="display:none"></div>
+                  <div id="mce-success-response" style="display:none"></div>
                 </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                   <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_5c2a24e15a906f29e2c6a9b72_3081d2e76a" tabindex="-1" value=""></div>
-                  <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                  <div class="clear"><input type="submit" value="Subscribe" name="subscribe subscribe_btn" id="mc-embedded-subscribe" class="button"></div>
                   </div>
             </form>
           </div>
