--- a/app/views/users/dashboard/_new_writer.html.erb
+++ b/app/views/users/dashboard/_new_writer.html.erb
@@ -26,11 +26,11 @@
         <div style="padding-right: 10px;">
           <p>When you publish your first article, you will become an official writer for The Teen Magazine and will receive your own
           author page.</p>
-          <p>To unlock your official writer account:</p>
+          <p>Please complete the following steps.</p>
           <ol>
             <li>Introduce yourself in the <a target="_blank" href="https://www.facebook.com/groups/615063885673363/">Facebook group</a>. You can also dm <%= link_to "The Teen Magazine", "https://www.instagram.com/theteenmagazine_/" %> on Instagram to be added as a close friend.
             We have an active dm group there that will keep you updated with everything happening with The Teen Magazine.</li>
-            <li>Read through the resources found at the bottom of your dashboard</li>
+            <li>Read through the resources found at the bottom of your dashboard.</li>
             <li>Claim a pitch from the <%= link_to("pitches page", pitches_path) %> and start your first article. If you have your own article idea that fits our audience, you can <%= link_to("pitch a new article", new_pitch_path) %> instead.</li>
             <li>Once you've finished your first article, you can submit it for review though the article form. Our amazing editors will look it over and give you
             feedback.</li>
