--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,7 +9,7 @@
               <div class="featured_img">
                 <%=link_to(image_tag(publishedPosts.first.thumbnail.url(:large2), alt: publishedPosts.first.title, :id => "image_thumbnail"), publishedPosts.first )%>
               </div>
-              <h3 class="article_title"><a href="#"><%= link_to publishedPosts.first.title, publishedPosts.first %></a></h3>
+              <h3 class="article_title"><%= link_to publishedPosts.first.title, publishedPosts.first %></h3>
               <p class="date"><%= publishedPosts.first.publish_at.strftime("%A, %b %d")%></p>
             </div>
           </div>
@@ -18,7 +18,7 @@
               <div class="thumbnail">
                 <%=link_to(image_tag(post.thumbnail.url(:medium), alt: post.title, :class => "image_thumbnail"), post )%>
                 <div class="thumbnail--container">
-                  <h3 class="article_title"><a href="#"><%= link_to post.title, post %></a></h3>
+                  <h3 class="article_title"><%= link_to post.title.truncate_words(14), post %></h3>
                   <p class="date"><%= post.publish_at.strftime("%A, %b %d")%></p>
                 </div>
               </div>
