fixed css, devise session cookie, fixed social media sharing

--- a/app/assets/stylesheets/onboarding.css.scss
+++ b/app/assets/stylesheets/onboarding.css.scss
@@ -60,6 +60,7 @@
       font-size: 80px;
       color: white;
       display: inline;
+      word-break: normal;
     }
     .text-wrapper {
       display: inline-flex;
