updated about us, fixed css, and updated apply page

--- a/app/assets/stylesheets/_pages.css.scss
+++ b/app/assets/stylesheets/_pages.css.scss
@@ -155,6 +155,15 @@
   }
 }
 
+.link_grn {
+  color: #65B19D;
+  &:hover {
+    color: #65B19D;
+    text-decoration: none;
+    opacity: 0.8;
+  }
+}
+
 .apply_wrapper {
   position: relative;
   margin: 0 auto;
