--- a/app/views/users/onboarding/_next_steps.html.erb
+++ b/app/views/users/onboarding/_next_steps.html.erb
@@ -26,7 +26,7 @@
     <h5>Next Steps:</h5>
     <p>On your new writer dashboard, you will find resources that will walk you through
        writing your first article. Once completed, your full writer account will be
-       activated, and you will get your own Author page on The Teen Magazine.</p>
+       activated, and you will get your own author page on The Teen Magazine.</p>
   </div>
   <%= link_to "Go to Dashboard!", user_path(current_user.slug), :id => "onboarding_button" %>
 </div>
