--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -37,6 +37,12 @@ body {
   margin-top: 0 !important;
 }
 
+#banner_writing {
+  width: 100%;
+  max-height: 200px;
+  object-fit: cover;
+}
+
 html, body {
    height: 100%;
     width: 100%;
@@ -113,9 +119,8 @@ html, body {
   background-image: url(writer.jpg);
   background-size: cover;
   background-position: center center;
-  margin-top: -10px;
   height: 0;
-  padding-top: 29%;
+  padding-top: 20%;
 }
 
 .date_post_preview {
