--- a/app/views/applies/create.html.erb
+++ b/app/views/applies/create.html.erb
@@ -1,43 +1,12 @@
 <!-- thank you page once submitted -->
 
 <div class="submitted" style="max-width: 800px; margin: auto;">
-<div style="padding: 0px 30px;">
-  <h1>We're so excited you want to join The Teen Magazine writer team!</h1>
-  <img style="display: block; width: 600px; max-width: 100%; margin: 0 auto;" src="https://media1.tenor.com/images/1f84b096cbe1cc9f3763c803bb17e10e/tenor.gif?itemid=5878976" />
-  <br>
-  <p>One of our amazing editors will read your cover letter and get back to you. You will be notified within three business days if your application is accepted.</p>
-  <p>Go back to <a href="/">The Teen Magazine</a></p>
-</div>
-<div class="signupdiv signup_full" style="float: none;">
-  <div class="container">
-    <div class="exclusive-offer">
-      <h5 class="exclusive-title" id="exclusive-title--id">Join our mailing list to stay up to date with The Teen Magazine!</h5>
-    </div>
-  <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-  <div class="signup">
-    <div class="clearfix">
-      <div id="mc_embed_signup" class="home--signup">
-      <form action="//herokuapp.us14.list-manage.com/subscribe/post?u=5c2a24e15a906f29e2c6a9b72&amp;id=3081d2e76a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" style="padding-left: 0;" novalidate>
-          <div id="mc_embed_signup_scroll">
-        <h2>Subscribe to our magazine:</h2>
-
-        <div id="mce-responses-container">
-          <div id="mce-error-response" style="display:none"></div>
-          <div id="mce-success-response" style="display:none"></div>
-        </div>
-           <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-      <div class="mccontainer">
-         <div class="flex--email">
-           <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-           <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_5c2a24e15a906f29e2c6a9b72_3081d2e76a" tabindex="-1" value=""></div>
-           <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button subscribe_btn"></div>
-         </div>
-      </div>
-          </div>
-      </form>
-      </div>
-    </div>
-   </div>
+  <div style="padding: 0px 30px;">
+    <h1>We're so excited you want to join The Teen Magazine writer team!</h1>
+    <img style="display: block; width: 600px; max-width: 100%; margin: 0 auto;" src="https://media1.tenor.com/images/1f84b096cbe1cc9f3763c803bb17e10e/tenor.gif?itemid=5878976" />
+    <br>
+    <p>One of our amazing editors will read your cover letter and get back to you. You will be notified within three business days if your application is accepted.</p>
+    <p>Go back to <a class="link_grn" href="/">The Teen Magazine</a></p>
+    <br>
   </div>
-</div>
 </div>
