--- a/app/views/pages/team.html.erb
+++ b/app/views/pages/team.html.erb
@@ -1,44 +1,24 @@
+<%= image_tag "banner_onboarding", id: "banner_writing" %>
 <div class="skinny_wrapper team">
-  <h1 id="page_title">About Us</h1>
-  <div class="about">
-    <img id="main" src="https://pbs.twimg.com/media/DM7BlLDVAAA5AKb.jpg" />
-    <p>
-      Founded in 2017 by Mia Johansson, The Teen Magazine started as a blog with a few writers. Since then, it has grown into an international online magazine
-      with over 250 writers from around the world. Mia made the website with the initial purpose of learning Ruby on Rails and Git for one of her computer science internships.
-      She never thought The Teen Magazine would be anything more than a hobby, but after seeing the excitement of her new writers, Mia became inspired to grow the website.
-      Today The Teen Magazine gives aspiring journalists a platform to publish, and, after the fires
-      in Mia's hometown of Santa Rosa, has helped make a difference in her community by fundraising for fire victims.
-    </p>
-  </div>
-  <h1 id="page_title">Meet The Teen Magazine Team</h1>
-  <h3>Editors</h3>
-  <div class="flex--profile">
-    <% @users.each do |user| %>
-       <% if user.editor == true %>
-           <div class="featured">
-             <% if user.profile.exists? %>
-               <%= link_to(image_tag(user.profile.url(:square), :class => "profile_img"), user) %>
-             <% else %>
-               <%= link_to(image_tag("profile_image", :class => "profile_img"), user) %>
-             <% end %>
-             <h6><%= link_to(user.full_name, user, class: "link_nrml") %></h6>
-           </div>
-       <% end %>
-    <% end %>
-  </div>
-  <h3>Featured Writers</h3>
-  <div class="flex--profile">
-    <% @users.each do |user| %>
-       <% if Post.where(user_id: user.id).exists? %>
-            <div class="featured">
-              <% if user.profile.exists? %>
-                <%= link_to(image_tag(user.profile.url(:square), :class => "profile_img"), user) %>
-              <% else %>
-                <%= link_to(image_tag("profile_image", :class => "profile_img"), user) %>
-              <% end %>
-              <h6><%= link_to(user.full_name, user, class: "link_nrml") %></h6>
-            </div>
-       <% end %>
-    <% end %>
-  </div>
+  <h1>About Us</h1>
+  <p>
+    We believe that teen magazines should be inclusive and focus on topics written by, and important to, teens.
+    The Teen Magazine is the first online magazine for high schoolers that gives young, aspiring journalists the opportunity to share their voice,
+    build their writing portfolio, and receive peer feedback and mentorship in the editorial industry.
+    In addition to contributing and submitting content, our writers can connect with each other, share ideas, and help each other improve.
+  </p>
+  <h1>Our Story</h1>
+  <p>
+    As a Junior in high school, <%= link_to("Mia Johansson", User.first, :class => "link_nrml") %>
+    found there was a need for an online platform for young writers to connect and have their voices heard.
+    She built the first version of The Teen Magazine in 2017, and since then, the online publishing platform has reached hundreds of thousands of readers and
+    has a writer community with <%= User.count %> writers from around the world. Mia is now a student Harvard and continues to work on the website.
+  </p>
+  <p>
+    Mia cannot thank The Teen Magazine's writers enough for sparking her passion and love for this community. Our current writer team is at the heart of our ever-evolving online platform for young writers, and
+    Mia is currently working on new features for The Teen Magazine that will give more resources to writers and make the platform more social.
+  </p>
+  <h1>Join Our Team</h1>
+  <p>Apply to our writer community <%= link_to("here", "/apply", :class => "link_grn") %>.</p>
+  <br>
 </div>
