--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -24,7 +24,7 @@
   <%= f.text_field :email %>
 
   <%= f.check_box :bi_monthly_assignment %>
-  <%= f.label "receive bi-monthly article assignments" %><br>
+  <%= f.label "receive occasional article assignments" %><br>
 
   <h5>Links (Optional)</h5>
 
