--- a/app/views/users/onboarding/_welcome.html.erb
+++ b/app/views/users/onboarding/_welcome.html.erb
@@ -12,41 +12,27 @@
     <h3>We grow as writers, as influencers, as leaders, together</h3>
     <p>Congratulations on being accepted as a writer for The Teen Magazine! Our community of talented and young writers
       inspire and support each other into becoming part of the next generation of
-      female leaders.</p>
+       leaders.</p>
     <%= image_tag "we-are-the-writers.jpg", :class => "welcome_hero" %>
     <p style="margin-top: 8px; font-family: 'Playfair Display'"><i>❝ Throughout human history, our greatest leaders and thinkers have used
       the power of words to transform our emotions, to enlist us in their causes, and to
       shape the course of destiny. Words can not only create emotions, they create actions.
       And from our actions flow the results of our lives. ❞
-      <span style="font-size: 12px;">- Tony Robbins</span></i>
+      <span>- Tony Robbins</span></i>
     </p>
     <h5>What to Expect: </h5>
       <p>The Teen Magazine's writer community will give you the guidance and experience necessary to launch your career in the
         journalism and blogging world. As a writer for The Teen Magazine, you will get the opportunity to:
         <ul>
-          <li>
-            Pitch article topics and get published in an international online magazine
-          </li>
-          <li>
-            Gain applicable experience and training in the editorial industry
-          </li>
-          <li>
-            Give and receive feedback from your peers
-          </li>
-          <li>
-            Interview successful people and work with brands
-          </li>
-          <li>
-            Learn from and network with our talented writer community
-          </li>
-          <li>
-            Apply for other positions and internships within The Teen Magazine
-          </li>
+          <li>Pitch article topics and get published in an international online magazine</li>
+          <li>Have your own public author page that you can share with potential employers</li>
+          <li>Gain applicable experience and training in the editorial industry</li>
+          <li>Interview successful people and work with brands</li>
+          <li>Learn from and network with our talented writer community</li>
         </ul>
         <p>
-        Once you've gone through the training and your first article is published, you will have the option of being paired with a mentor.
-        If you haven't done so already, please ask to join the <a target="_blank" href="https://www.facebook.com/groups/615063885673363/">Facebook group</a>. It is very important that you
-        do so in order to be an active member in our writer community.
+        If you haven't done so already, please ask to join the <a target="_blank" href="https://www.facebook.com/groups/615063885673363/">Facebook group</a> so that you
+        can be an active member in our writer community. We also have a smaller group on <a target="_blank" href="https://www.instagram.com/theteenmagazine_/">Instagram</a> for writers not on Facebook (just dm us).
         </p>
       </div>
       <%= link_to "Next", onboarding_path(page: "your_profile"), :id => "onboarding_button" %>
