--- a/app/assets/stylesheets/_userprofile.css.scss
+++ b/app/assets/stylesheets/_userprofile.css.scss
@@ -299,7 +299,7 @@
     padding-bottom: 10px;
     .header_ttl {
       border-bottom: 1px #E9E9E9 solid;
-      padding: 15px;
+      padding: 15px 10px;
       width: 100%;
       display: block;
     }
