small grammar fix

--- a/app/views/applies/new.html.erb
+++ b/app/views/applies/new.html.erb
@@ -6,7 +6,7 @@ pintrk('track', 'pagevisit');
 <div id="apply_image">
 </div>
 <div class="apply_wrapper">
-  <h2>Apply to the The Teen Magazine Writer Team</h2>
+  <h2>Apply to The Teen Magazine Writer Team</h2>
   <p>
     Our writer team is made up of hundreds of college and high school writers from around the world who
     are passionate about improving their writing skills and are excited to connect with other like-minded writers.
